--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body
 	background-image: url("https://source.unsplash.com/featured/?fun");
 	background-size: cover;
 
-	animation-name:fadeIn;
+	animation-name:scaleIn;
 	animation-duration:0.5s;
 	animation-delay: 1.5s;
 	animation-fill-mode: backwards;
@@ -90,9 +90,9 @@ body
 	display: inline-block;
 	text-align: left;
 
-	animation-name:fadeIn;
+	animation-name:scaleIn;
 	animation-duration:0.5s;
-	animation-delay: 2s;
+	animation-delay: 2.25s;
 	animation-fill-mode: backwards;
 }
 .textContainer
@@ -105,6 +105,33 @@ body
 {
 	color:#bdc3c7;
 	padding-right:24px;
+}
+#nowPlayingVideo
+{
+	position: absolute;
+	left:1147px;
+	top:533px;
+
+	animation-name:scaleIn;
+	animation-duration:0.5s;
+	animation-delay: 1.75s;
+	animation-fill-mode: backwards;
+}
+.humble
+{
+	position: absolute;
+	top:254px;
+	left:1101px;
+	width: 338px;
+	height: 338px;
+
+	background-image: url("img/oct2019-monthly-partner-v2.png");
+	background-size: cover;
+
+	animation-name:scaleIn;
+	animation-duration:0.5s;
+	animation-delay: 2s;
+	animation-fill-mode: backwards;
 }
 
 @keyframes fadeIn
