--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body
 {
 	background: black;
-	color:#2c3e50;
+	color:#2d3436;
 	text-align: center;
 	font-family: VT323;
 	font-size: 36px;
@@ -15,7 +15,7 @@ body
 	height:1080px;
 	top: 0;
 	left: 0;
-	background:#ecf0f1;
+	background:#dfe6e9;
 	overflow:hidden;
 
 	animation-name:fadeIn;
@@ -63,7 +63,7 @@ body
 .windowTop
 {
 	height: 72px;
-	background: #2ecc71;
+	background: #00b894;
 }
 .unsplash
 {
@@ -103,7 +103,7 @@ body
 }
 .textLeft
 {
-	color:#bdc3c7;
+	color:#b2bec3;
 	padding-right:24px;
 }
 #nowPlayingVideo
@@ -198,7 +198,7 @@ body
 	line-height: 48px;
 	display: inline-block;
 	padding: 0 24px;
-	background:#2ecc71;
+	background:#00b894;
 }
 #alertCanvas
 {
@@ -210,7 +210,7 @@ body
 	overflow:hidden;
 	white-space: nowrap; 
 	text-overflow: ellipsis;
-	color:#2c3e50;
+	color:#2d3436;
 	text-align: left;
 	font-family: VT323;
 	font-size: 24px;
@@ -244,13 +244,12 @@ body
 	top: 0;
 	left: 0;
 	overflow:hidden;
-	color:#2c3e50;
+	white-space: nowrap; 
+	text-overflow: ellipsis;
+	color:#2d3436;
 	text-align: right;
 	font-family: VT323;
 	font-size: 24px;
-	white-space: nowrap; 
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
 .announcementText
 {
