--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=VT323');
+@import url('https://fonts.googleapis.com/css?family=VT323|Roboto+Black');
 
 body
 {
@@ -211,7 +211,7 @@ body
 	white-space: nowrap; 
 	text-overflow: ellipsis;
 	color:#2d3436;
-	text-align: left;
+	text-align: right;
 	font-family: VT323;
 	font-size: 24px;
 }
@@ -236,40 +236,39 @@ body
 	animation-delay: 1.5s;
 	animation-fill-mode: backwards;
 }
-#announcementCanvas
+.breakCanvas
 {
 	position: absolute;
+	top:0;
+	left:0;
 	width: 100%;
 	height:100%;
-	top: 0;
-	left: 0;
-	overflow:hidden;
-	white-space: nowrap; 
-	text-overflow: ellipsis;
-	color:#2d3436;
-	text-align: right;
-	font-family: VT323;
-	font-size: 24px;
-}
-.announcementText
-{
-	height:36px;
-	line-height: 36px;
-	padding: 0 24px;
-	display: inline-block;
-	background:white;
+	background:#00b894;
+	background-image: url("img/outer-space-patterns-4.jpg");
+	background-position: center center;
+	background-size: contain;
+	background-repeat: repeat;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-	animation-name:alertIn;
+	animation-name:fadeIn;
 	animation-duration:0.5s;
-	animation-delay: 1s;
+	animation-delay: 0.5s;
 	animation-fill-mode: backwards;
 }
-.announcementStyle
+.breakText
 {
-	display: inline-block;
-	animation-name:alertIn;
+	color:white;
+	font-size: 12vw;
+	font-family: 'Roboto Black';
+	text-transform: uppercase;
+	line-height: 10vw;
+	text-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+
+	animation-name:scaleIn;
 	animation-duration:0.5s;
-	animation-delay: 1.5s;
+	animation-delay: 1s;
 	animation-fill-mode: backwards;
 }
 
