--- a/style.css
+++ b/style.css
@@ -214,6 +214,9 @@ body
 	text-align: right;
 	font-family: VT323;
 	font-size: 24px;
+
+	background-image: url("img/irina-iriser-mNz9Pa3tz34-unsplash.jpg");
+	background-size: cover; 
 }
 .alertText
 {
@@ -223,18 +226,32 @@ body
 	display: inline-block;
 	background:white;
 
-	animation-name:alertIn;
+	/* animation-name:alertIn;
 	animation-duration:0.5s;
 	animation-delay: 1s;
-	animation-fill-mode: backwards;
+	animation-fill-mode: forwards;
+
+	animation-name:alertOut;
+	animation-duration:0.5s;
+	animation-delay: 11s;
+	animation-fill-mode: forwards; */
+
+	animation: alertIn 0.5s 1s backwards, alertOut 0.5s 4s forwards;
 }
 .alertStyle
 {
-	display: inline-block;
+	/* display: inline-block;
 	animation-name:alertIn;
 	animation-duration:0.5s;
 	animation-delay: 1.5s;
 	animation-fill-mode: backwards;
+
+	animation-name:alertOut;
+	animation-duration:0.5s;
+	animation-delay: 10.5s;
+	animation-fill-mode: forwards; */
+
+	animation: alertIn 0.5s 1.5s backwards, alertOut 0.5s 3.5s forwards;
 }
 .breakCanvas
 {
@@ -307,5 +324,17 @@ body
 	to
 	{
 		filter:opacity(1);
+	}
+}
+@keyframes alertOut
+{
+    from
+	{
+		filter:opacity(1);
+	}
+	to
+	{
+		transform: translateY(-12px);
+		filter:opacity(0);
 	}
 }
