--- a/style.css
+++ b/style.css
@@ -301,6 +301,53 @@ body
 	top:10px;
 	animation: alertIn 0.5s 0.5s backwards, alertOut 0.5s 2.5s forwards;
 }
+#webcamCanvas
+{
+	position: absolute;
+	width: 100%;
+	height:100%;
+	top: 0;
+	left: 0;
+	overflow:hidden;
+	white-space: nowrap; 
+	text-overflow: ellipsis;
+	color:#2d3436;
+	text-align: right;
+	font-family: VT323;
+	font-size: 24px;
+
+	box-sizing: border-box;
+	border: 3px solid white;
+
+	/* background-image: url("img/irina-iriser-mNz9Pa3tz34-unsplash.jpg");
+	background-size: cover;  */
+}
+.webcamText
+{
+	position: absolute;
+	bottom:0;
+	right:0;
+	background:white;
+	padding: 2px 10px;
+
+	animation: webcamIn 0.5s 0s normal backwards, webcamIn 0.5s 19.5s reverse forwards;
+}
+.faStyle
+{
+	font-size:0.7em;
+}
+.faName
+{
+	color: #2ecc71;
+}
+.faTwitter
+{
+	color:#1da1f2;
+}
+.faTwitch
+{
+	color:#6441a5;
+}
 
 @keyframes fadeIn
 {
@@ -347,5 +394,17 @@ body
 	{
 		transform: translateY(-12px);
 		filter:opacity(0);
+	}
+}
+@keyframes webcamIn
+{
+    from
+	{
+		transform: translateX(12px);
+		filter:opacity(0);
+	}
+	to
+	{
+		filter:opacity(1);
 	}
 }
